@@ -3,6 +3,7 @@
 # 1.0.3
     * Tested on WP 6.0.1 and WC 6.7.0.
     * Do not get all information in debug_backtrace().
+    * Added link to the Documentation for "Block Payment methods" setting.
 
 # 1.0.2
     * Added default encoding into Cashier URL.
